# android-il2cpp-modspeed

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  log.h  main.cpp
app/src/main/cpp/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
app/src/main/cpp/imgui/backends/: imgui_impl_android.cpp  imgui_impl_android.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
app/src/main/java/com/example/testxp/: Main.java
app/src/main/res/values/: strings.xml
